<resources>
    <string name="app_name">RPL</string>
    <string name="lihat_kurikulum">Lihat Kurikulum</string>
    <string name="mahasiswa_belajar_rpl">Mahasiswa Belajar RPL</string>
    <string name="jelajahi_dunia_teknologi_bersama_jurusan_rpl">Jelajahi Dunia Teknologi Bersama Jurusan RPL</string>
    <string name="video_profil">Video Profil</string>
    <string name="logo_jurusan">Logo Jurusan</string>
    <string name="beranda">Beranda</string>
    <string name="tentang">Tentang</string>
    <string name="kurikulum">Kurikulum</string>
    <string name="fasilitas">Fasilitas</string>
    <string name="dosen">Dosen</string>
    <string name="prospek_kerja">Prospek Kerja</string>
    <string name="daftar">Daftar</string>
    <string name="toggle_mode_gelap_terang">Toggle Mode Gelap/Terang</string>
    <string name="daftar_sekarang">Daftar Sekarang</string>
    <string name="content_desc_competency_tabs">Pilihan kategori kompetensi dan kurikulum</string>
    <string name="kompetensi_amp_kurikulum_unggulan"><![CDATA[Kompetensi & Kurikulum Unggulan]]></string>
    <string name="tombol_play_video">Tombol Play Video</string>
    <string name="logo_oracle">Logo Oracle</string>
    <string name="logo_dicoding">Logo Dicoding</string>
    <string name="didukung_mitra_industri_ternama">Didukung Mitra Industri Ternama</string>
    <string name="logo_bangkit">Logo Bangkit</string>
    <string name="todo">TODO</string>
    <string name="kontak_kami">Kontak Kami</string>
    <string name="jurusan_rekayasa_perangkat_lunak_nkampus_pei_purwakarta_njl_industri_no_1_purwakarta">Jurusan Rekayasa Perangkat Lunak\nKampus PEI Purwakarta\nJl. Industri No. 1, Purwakarta</string>
    <string name="info_rpl_pei_ac_id">info.rpl@pei.ac.id</string>
    <string name="_0264_123_4567">(0264) 123-4567</string>
    <string name="link_cepat">Link Cepat</string>
    <string name="pendaftaran_pmb">Pendaftaran PMB</string>
    <string name="detail_kurikulum">Detail Kurikulum</string>
    <string name="blog_jurusan">Blog Jurusan</string>
    <string name="faq">FAQ</string>
    <string name="ikuti_kami">Ikuti Kami</string>
    <string name="instagram_rpl_pei">Instagram RPL PEI</string>
    <string name="tiktok_rpl_pei">TikTok RPL PEI</string>
    <string name="youtube_rpl_pei">YouTube RPL PEI</string>
    <string name="_2025_jurusan_rekayasa_perangkat_lunak_kampus_pei_all_rights_reserved">© 2025 Jurusan Rekayasa Perangkat Lunak Kampus PEI. All Rights Reserved.</string>
    <string name="tentang_jurusan_rpl">Tentang Jurusan RPL</string>
    <string name="selalu_update_dengan_standar_dan_kebutuhan_industri_teknologi_terkini">Selalu update dengan standar dan kebutuhan industri teknologi terkini.</string>
    <string name="pengajar_ahli_dari_praktisi_industri_dan_akademisi_berpengalaman">Pengajar ahli dari praktisi industri dan akademisi berpengalaman.</string>
    <string name="kurikulum_terkini">Kurikulum Terkini</string>
    <string name="dosen_profesional">Dosen Profesional</string>
    <string name="ringkasan_visi_amp_misi_jurusan_rekayasa_perangkat_lunak_pei_adalah_untuk_menjadi_program_studi_unggul_dalam_menghasilkan_lulusan_yang_inovatif_kompeten_dan_berdaya_saing_global_di_bidang_rekayasa_perangkat_lunak"><![CDATA[Ringkasan Visi & Misi jurusan Rekayasa Perangkat Lunak PEI adalah untuk menjadi program studi unggul dalam menghasilkan lulusan yang inovatif, kompeten, dan berdaya saing global di bidang rekayasa perangkat lunak.]]></string>
    <string name="mengapa_memilih_rpl_pei">Mengapa Memilih RPL PEI?</string>
    <string name="prospek_karir_menjanjikan">Prospek Karir Menjanjikan</string>
    <string name="gabung_sekarang">Gabung Sekarang</string>
    <string name="konsultasi_gratis">Konsultasi Gratis</string>
    <string name="bergabunglah_dengan_jurusan_rpl_pei_sekarang_dan_wujudkan_mimpimu">Bergabunglah dengan Jurusan RPL PEI sekarang dan wujudkan mimpimu!</string>
    <string name="siap_menjadi_bagian_dari_inovator_teknologi_masa_depan">Siap Menjadi Bagian dari Inovator Teknologi Masa Depan?</string>
    <string name="fasilitas_belajar_modern">Fasilitas Belajar Modern</string>
    <string name="mata_kuliah_favorit">Mata Kuliah Favorit</string>
    <string name="profil_dosen_pengajar">Profil Dosen Pengajar</string>
    <string name="lihat_lebih_dekat_jurusan_rpl">Lihat Lebih Dekat Jurusan RPL</string>
    <string name="thumbnail_video_promosi_rpl">Thumbnail Video Promosi RPL</string>
    <string name="apa_kata_mahasiswa_kami">Apa Kata Mahasiswa Kami?</string>
    <string name="gambar_fasilitas">Gambar Fasilitas</string>
    <string name="logo_jurusan_rpl_pei">Logo Jurusan RPL PEI</string>
    <string name="toggle_mode_gelap_atau_terang">Toggle Mode Gelap atau Terang</string>
    <string name="profil_jurusan_rpl">Profil Jurusan RPL</string>
    <string name="testimoni">Testimoni</string>
</resources>